# psearch

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
personal_search/: cli.py  config.py  indexer.py  search.py
