[project]
name = "personal-search-engine"
version = "0.1.0"
description = "Personal search engine for developer notes and code snippets"
requires-python = ">=3.9"

[project.scripts]
psearch = "personal_search.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]